# grimoirelab-hatstall

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  _version.py  app.py  requirements.txt  setup.cfg  shdb.cfg
.github/workflows/: ci.yml
django-hatstall/: MANIFEST.in  README.rst  config_deployment.py  config_secret.py  manage.py  setup.py
django-hatstall/django_hatstall/: create_admin_superuser.py  settings.py  urls.py  wsgi.py
django-hatstall/django_hatstall/templates/: base.html
django-hatstall/hatstall/: apps.py  urls.py  views.py
django-hatstall/hatstall/templates/: about.html  organizations.html  profile.html  profiles.html  search_identities.html
django-hatstall/hatstall/templates/registration/: login.html
django-hatstall/hatstall/templatetags/: blank_name.py
django_hatstall/: manage.py  shdb.cfg
django_hatstall/django_hatstall/: create_admin_superuser.py  settings.py  urls.py  wsgi.py
django_hatstall/identities/: apps.py  shdb_urls.py  urls.py  views.py
django_hatstall/identities/data/: shdb.sql
django_hatstall/identities/templates/organizations/: organizations.html
django_hatstall/identities/templates/profiles/: base.html  profile.html  profiles.html
django_hatstall/identities/templates/shdb/: shdb_form.html
docker/: Dockerfile  README.md  apache-hatstall.conf  docker-compose.yml  orgs_file.json  projects.json  setup.cfg  shdb.cfg  stage
docs/: README.md
mysite/hatstall/: about_urls.py  orgs_urls.py  tests.py  urls.py  views.py
mysite/hatstall/data/: shdb.sql
mysite/hatstall/templates/: profiles.html
mysite/hatstall/templates/profiles/: profiles.html
mysite/mysite/: create_admin_superuser.py  settings.py  urls.py
mysite/mysite/templates/: base.html
templates/: about.html  base.html  index.html  organizations.html  profile.html  profiles.html
