[general]
short_name = Hatstall
update = true
# seconds between collect+enrich rounds
# during enrich is when refreshing of identities is done
min_update_delay = 60
debug = true
logs_dir = logs
kibana = "5"

[projects]
projects_file = /home/grimoirelab/conf/projects.json

[es_collection]
url = http://bitergia:bitergia@172.17.0.1:9200

[es_enrichment]
url = http://bitergia:bitergia@172.17.0.1:9200
autorefresh = true
studies = false

[sortinghat]
host = mariadb
user = root
password =
database = shdb
load_orgs = true
orgs_file = /home/grimoirelab/conf/orgs_file.json
# see: sortinghat unify --help
unify_method =
affiliate = false
unaffiliated_group = Unknown
# autoprofile modifies always all unique identities so it forces
# to refresh always all unique identities. Not using it in general case.
# autoprofile = [customer,git,github]
autoprofile = []
matching = [email]
# Every 10s identities will be checked to refresh
sleep_for = 10
bots_names = [Beloved Bot]

[panels]
kibiter_time_from= "now-30y"
kibiter_default_index= "git"

[phases]
collection = true
identities = true
enrichment = true
panels = true

[git]
raw_index = git_test-raw
enriched_index = git_test
